--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,3 +1,28 @@
-footer {
-  background: darkviolet;
+.footer {
+  height: 244px;
+  width: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+
+  position: relative;
+  bottom: 0;
+  left: 51px;
+
+  svg {
+    width: 2rem;
+    height: 2rem;
+    color:  var(--shape);
+    margin-bottom: 0.8rem;
+  }
+}
+
+.line {
+  background: var(--shape);
+  width: 0.2rem;
+  height: 100%
+
+;
 }
