Experiences page done

--- a/src/pages/About/styles.module.scss
+++ b/src/pages/About/styles.module.scss
@@ -1,8 +1,8 @@
 .container {
-  margin: 92px 96px 0 96px;
+  margin: 192px 96px 0 96px;
 
   display: flex;
-  height: auto;
+  height: 100vh;
   flex-direction: row;
   //justify-content: space-between;
   //align-items: center;
