--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -6,10 +6,11 @@
   flex-direction: column;
   align-items: center;
 
+  margin-left: 25px;
 
-  position: relative;
-  bottom: 0;
-  left: 51px;
+  //position: absolute;
+  //bottom: 0;
+  //left: 51px;
 
   svg {
     width: 2rem;
