--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,14 +1,17 @@
 .content {
   width: 100%;
   height: 6rem;
-  background: var(--black);
+  background-color: rgba(255, 255, 255, .15);
+  backdrop-filter: blur(5px);
 
   display: flex;
-
   align-items: center;
   justify-content: space-between;
 
   padding: 0 3rem;
+
+  position: fixed;
+  top: 0;
 
   div {
     height: 6rem;
@@ -19,7 +22,8 @@
     .link {
       color: var(--shape);
       text-decoration: none;
-
+      background: transparent;
+      border: 0;
       & + .link {
         margin-left: 1.5rem;
       }
