--- a/src/pages/Experience/styles.module.scss
+++ b/src/pages/Experience/styles.module.scss
@@ -1,5 +1,5 @@
 .container {
-  margin: 192px 96px 0 96px;
+  margin: 152px 96px 0 96px;
 
   display: flex;
   height: 100vh;
@@ -79,8 +79,8 @@
     margin-top: 2rem;
     .descriptionHeader {
       display: flex;
-      flex-direction: row;
-      align-items: center;
+      flex-direction: column;
+      align-items: flex-end;
       justify-content: end;
 
       svg {
@@ -92,6 +92,15 @@
       h2 {
         color: var(--shape);
         font-family: Roboto Mono, sans-serif;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+      }
+
+      h3 {
+        color: var(--shape);
+        font-family: Roboto Mono, sans-serif;
+        font-weight: normal;
       }
     }
 
